UserApp/src/apps/utilElements/ListView/style.css
.list-view {
    width: 100%;
    height: fit-content;
    padding-bottom: 50px;
    display: block;
}


.item-list {
    margin: 0;
    padding: 0;
    list-style: none;
}



/* Searchbar */
.lv-search-bar-container {
    position: sticky;
    /* Setting the top to 0px leads to a small gap between the searchbar and the top */
    top: -1px;
    z-index: 1;
    margin: 0 -20px;
    padding: 10px 21px;
    display: flex;
    flex-direction: row;
    background-color: #F5F5F5;
}

.lv-search-bar-container input {
    width: 100%;
    border: 1px solid lightgray;
    border-radius: 15px;
    padding: 15px 20px;
    background-color: transparent;    
}

.lv-search-bar-container input:focus {
    margin: -1px;
    border-width: 2px;
    border-color: #BBD9DB;
}



/* List Item */
.item-list .lv-card {
    width: calc(100% - 40px);
    margin: 10px 0;
    padding: 20px;
}



/* Dark mode */
@media(prefers-color-scheme: dark) {
    .lv-search-bar-container {
        background-color: #222;
    }
    
    .lv-search-bar-container input:focus {
        border-color: #82a0aa;
    }
}



@media(min-width: 600px) {
    .lv-search-bar-container {
        margin: 0;
    }
    .item-list .lv-card {
        width: calc(100% - 80px);
        margin: 10px 20px;
    }
}

